[tool.poetry]
name = "idt-calculator"
version = "0.1.0"
description = "An ACES Input Device Transform (IDT) calculator"
license = "License Terms for Academy Color Encoding System Components"
authors = [ "Alex Forsythe <aforsythe@oscars.org>", "Thomas Mansencal <thomas.mansencal@gmail.com>" ]
maintainers = [ "Academy of Motion Picture Arts and Sciences <aforsythe@oscars.org >" ]
readme = 'README.rst'
repository = "https://github.com/ampas/idt-calculator"
homepage = "https://www.oscars.org/science-technology/sci-tech-projects/aces"
keywords = [
    "aces",
    "ampas",
    "color",
    "color-science",
    "color-space",
    "color-spaces",
    "colorspace",
    "colorspaces",
    "colour",
    "colour-science",
    "colour-space",
    "colour-spaces",
    "colourspace",
    "colourspaces",
    "dash",
    "docker",
    "python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.12"
colour-datasets = ">= 0.2.1"
colour-checker-detection = ">= 0.1.4"
colour-science = ">= 0.4.2"
dash = "*"
dash-bootstrap-components = "*"
dash-renderer = "*"
dash-uploader = "*"
gunicorn = "*"
imageio = ">= 2, < 3"
jsonpickle = ">= 2, < 3"
matplotlib = ">= 3.2, != 3.5.0, != 3.5.1"
networkx = ">= 2.6, < 3"
numpy = ">= 1.20, < 2"
scipy = ">= 1.7, < 2"
plotly = "*"
typing-extensions = ">= 4, < 5"

packaging = "<= 21.3"  # Later versions currently break with Dash Uploader.

black = { version = "*", optional = true }  # Development dependency.
coverage = { version = "*", optional = true }  # Development dependency.
flake8 = { version = "*", optional = true }  # Development dependency.
invoke = { version = "*", optional = true }  # Development dependency.
nose = { version = "*", optional = true }  # Development dependency.
pre-commit = { version = "*", optional = true }  # Development dependency.
pytest = { version = "*", optional = true }  # Development dependency.

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
nose = "*"
pre-commit = "*"
pytest = "*"

[tool.poetry.extras]
development = [
    "black",
    "coverage",
    "flake8",
    "invoke",
    "nose",
    "pre-commit",
    "pytest",
]

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.flynt]
line_length=999

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D104,D200,D202,D205,D301,D400"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
